--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
+@font-face {
+    font-family: fontlogo;
+    src: url(font/logo.ttf.ttf);
+}
+
+@font-face {
+    font-family: fontsub;
+    src: url(font/sub.otf.otf);
+}
+
 *{
     text-decoration: none;
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
+
 
 body {
     margin: 0px;
@@ -33,9 +45,12 @@ body {
 }
 
 .imgtop {
-    width: 800px;
+    width: 1000px;
     position: relative;
-    margin: 80px 200px 0px 70px;
+    margin-bottom: -230px;
+    margin-top: 150px;
+    display: block;
+    z-index: -1;
 }
 
 .header {
@@ -54,7 +69,7 @@ body {
 .header h2{
     text-align: auto;
     color: #ffffff;
-    font-family: 'league spartan';
+    font-family: fontsub;
     font-size: 40pt;
 }
 
@@ -78,7 +93,7 @@ p.text{
     font-size: 40px;
     font-weight: bold;
     float: left;
-    font-family: DotLirium;
+    font-family: fontlogo;
     color: #a5a7de;
 }
 
@@ -188,7 +203,7 @@ section {
 }
 
 h2 {
-    font-family: 'league spartan';
+    font-family: fontsub;
     font-weight: 800;
     font-size: 40px;
     margin-bottom: 20px;
@@ -199,7 +214,7 @@ h2 {
 
 h4 {
     justify-content: center;
-    font-family: 'League Spartan';
+    font-family: fontsub;
     font-weight: 600;
     font-size: 20px;
     color: #415190;
@@ -215,6 +230,7 @@ a.tbl-sosmed {
     color: #FFF;
     cursor: pointer;
     font-weight: bold;
+    font-size: 12px;
 }
 
 a.tbl-sosmed:hover {
@@ -262,7 +278,7 @@ p {
 
 .tengah {
     text-align: center;
-    width: 100%;
+    width: 50%;
 
 }
 
@@ -278,11 +294,11 @@ p {
 }
 
 .kartu-social {
-    width: 20%;
+    width: 25%;
 }
 
 .kartu-social img {
-    width: 70px;
+    width: 50px;
     justify-content: center;
     margin: auto;
     cursor: pointer;
@@ -314,7 +330,7 @@ p {
 }
 
 h3 {
-    font-family: 'League Spartan';
+    font-family: fontsub;
     font-weight: 800;
     font-size: 15px;
     margin-bottom: 20px;
@@ -330,17 +346,15 @@ h3 {
     margin-top: 50px;
 }
 
-@font-face {
-    font-family: 'DotLirium';
-    font-family: 'LeagueSpartan-Bold';
-    src: url('fonts/DotLirium.ttf') format('truetype');
-    src: url('fonts/LeagueSpartan-Bold.otf') format('opentype');
-}
-
-@media screen and (max-width: 991.98px){
+@media screen and (max-width: 920px){
 
     .wrapper {
        width: 90%; 
+       margin: 0 auto;
+    }
+
+    #content {
+        display: flex;
     }
 
     .logo a{
@@ -349,9 +363,16 @@ h3 {
         text-align: center;
     }
 
+    nav {
+        position: sticky;
+        position: -webkit-sticky;
+        top: 0px;
+        z-index: 1;
+    }
+
     nav .menu {
         width: 100%;
-        margin: 0;
+
     }
     
     nav .menu ul {
@@ -379,14 +400,22 @@ h3 {
         margin-top: -90px;
     }
 
+    .header {
+        margin-left: 30%;
+    }
+
+    .img1 {
+        width: 100%;
+    }
+
     .top .imgtop {
         display: block;
-        width: 40%;
+        width: 100%;
         height: auto;
         position: absolute;
-        top: 280px;
-        left: 50%;
-        transform: translateX(-30%);
+        top: 200px;
+        margin-left: 180%;
+        transform: translateX(-40%);
         z-index: -1;
     }
 
@@ -399,20 +428,34 @@ h3 {
         font-size: 30pt;
     }
      
+    .tengah{
+        width: 100%;
+    }
     .kartu-sosmed img{
-        width: 20%;
+        width: -10%;
         display: flex;
         justify-content: space-between;
     }
 
     .footer {
-        margin: auto;
-        width: 90%;
+        margin-left: -20px;
+        width: 100%;
+    }
+
+    .footer-section {
+        margin: 0 auto;
+        width: 40%;
     }
 
     table {
         justify-content: center;
         position: relative;
+    }
+
+    html{
+        margin: 0 auto;
+        display: flex;
+        display: ;
     }
 
 }
